# ByteToDataConverter

./: CMakeLists.txt  README.md
include/iodata/: iodata.h
src/: CMakeLists.txt
src/ByteToDataConverter/: CMakeLists.txt
src/iodata/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp
